<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    tools:context=".ui.onboarding.SecondScreen">

    <ImageView
        android:contentDescription="@string/illustration"
        android:id="@+id/iv_onboarding2"
        android:layout_width="320dp"
        android:layout_height="335dp"
        android:layout_marginTop="167dp"
        android:src="@drawable/o2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_ob2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_onboarding_2"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/avenir_heavy"
        app:layout_constraintEnd_toEndOf="@+id/iv_onboarding2"
        app:layout_constraintStart_toStartOf="@+id/iv_onboarding2"
        app:layout_constraintTop_toBottomOf="@+id/iv_onboarding2" />

    <TextView
        android:id="@+id/tv_subtitle_ob2"
        android:layout_width="269dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenir_roman"
        android:text="@string/subtitle_onboarding_2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_ob2"
        app:layout_constraintStart_toStartOf="@+id/tv_title_ob2"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_ob2" />

    <TextView
        android:id="@+id/button_continue_ob2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/blue_primary"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_btn_backob2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>