<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@color/white_background"
    tools:context=".ui.onboarding.FirstScreen">


    <ImageView
        android:contentDescription="@string/illustration"
        android:id="@+id/iv_onboarding1"
        android:layout_width="288dp"
        android:layout_height="335dp"
        android:layout_marginTop="167dp"
        android:src="@drawable/o1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_ob1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_onboarding_1"
        android:fontFamily="@font/avenir_heavy"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/iv_onboarding1"
        app:layout_constraintStart_toStartOf="@+id/iv_onboarding1"
        app:layout_constraintTop_toBottomOf="@+id/iv_onboarding1" />

    <TextView
        android:id="@+id/tv_subtitle_ob1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subtitle_onboarding_1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/avenir_roman"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_ob1"
        app:layout_constraintStart_toStartOf="@+id/tv_title_ob1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_ob1" />

    <TextView
        android:id="@+id/button_continue_ob1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/blue_primary"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>