<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    tools:context=".ui.onboarding.ThirdScreen">

    <ImageView
        android:contentDescription="@string/illustration"
        android:id="@+id/iv_onboarding3"
        android:layout_width="300dp"
        android:layout_height="335dp"
        android:layout_marginTop="167dp"
        android:src="@drawable/o3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_ob3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_onboarding_3"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/avenir_heavy"
        app:layout_constraintEnd_toEndOf="@+id/iv_onboarding3"
        app:layout_constraintStart_toStartOf="@+id/iv_onboarding3"
        app:layout_constraintTop_toBottomOf="@+id/iv_onboarding3" />

    <TextView
        android:id="@+id/tv_subtitle_ob3"
        android:layout_width="267dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenir_roman"
        android:text="@string/subtitle_onboarding_3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_ob3"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/tv_title_ob3"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_ob3" />

    <Button
        android:id="@+id/button_finish_ob3"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_button_ob3"
        android:backgroundTint="@color/blue_primary"
        android:textColor="@color/white"
        android:fontFamily="@font/avenir_roman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle_ob3"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle_ob3" />

    <ImageView
        android:id="@+id/iv_btn_backob3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        android:visibility="gone"
        app:lottie_rawRes="@raw/loadingbar"
        app:lottie_loop="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>