<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.result.ResultActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/main"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white_background"
      tools:context=".ui.result.ResultActivity">

    <TextView
        android:id="@+id/tv_heading_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/avenir_roman"
        android:lineSpacingExtra="14sp"
        android:textColor="@color/black"
        android:text="@string/heading_results"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/illustration"
        android:id="@+id/iv_result"
        android:layout_width="288dp"
        android:layout_height="288dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/negative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading_result" />

    <TextView
        android:id="@+id/tv_result_title"
        android:layout_width="219dp"
        android:layout_height="84dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/avenir_roman"
        android:gravity="center"
        android:text="@string/results_negative"
        android:lineSpacingExtra="10sp"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_result"
        app:layout_constraintStart_toStartOf="@+id/iv_result"
        app:layout_constraintTop_toBottomOf="@+id/iv_result" />

    <TextView
        android:id="@+id/tv_subtitle_result"
        android:layout_width="322dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/avenir_book"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5sp"
        android:text="@string/negative_desc"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_title" />

    <TextView
        android:id="@+id/hotline"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        tools:text="@string/hotline_text"
        android:fontFamily="@font/avenir_book"
        android:lineSpacingExtra="3sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle_result"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_result" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</android.widget.ScrollView>
