<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background"
        tools:context=".ui.home.HomeActivity">

        <TextView
            android:id="@+id/tv_main_heading"
            android:layout_width="247dp"
            android:layout_height="198dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/avenir_roman"
            android:lineSpacingExtra="14sp"
            android:text="@string/HeadingHome"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:layout_marginStart="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="32dp"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_main_heading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/avenir_book"
                android:hint="@string/hint_home"
                android:textColorHint="@color/black"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="8sp"
                android:maxLines="18"
                android:minLines="1"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_analyze"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/blue_primary"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/button_home"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@id/btn_analyze"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:text="@string/error_message"
            android:textColor="@color/red_error"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            android:visibility="gone"
            app:lottie_rawRes="@raw/loadingbar"
            app:lottie_loop="true"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
